# OpenCV_examples

./: AddingImages.cpp  Affine_Project.cpp  CMakeLists.txt  Drawing_1.cpp  Drawing_2.cpp  Effect.cpp  LICENSE.md  Logo.cpp  OpenCV_example.hpp  README.md  Snow.cpp  brightness.cpp  delaunay2.cpp  display_image.cpp  file_input_output.cpp  getTextSize.cpp  how_to_scan_images.cpp  load_modify_save_image.cpp  main.cpp  mat_mask_operations.cpp  mat_the_basic_image_container.cpp  write.cpp
2/: BasicLinearTransforms.cpp  BasicLinearTransformsTrackbar.cpp  CMakeLists.txt  CannyDetector_Demo.cpp  EqualizeHist_Demo.cpp  Geometric_Transforms_Demo.cpp  HoughCircle_Demo.cpp  HoughLines_Demo.cpp  Laplace_Demo.cpp  MatchTemplate_Demo.cpp  Morphology_1.cpp  Morphology_2.cpp  OpenCV_example.hpp  Pyramids.cpp  Remap_Demo.cpp  Smoothing.cpp  Sobel_Demo.cpp  Threshold.cpp  calcBackProject_Demo1.cpp  calcBackProject_Demo2.cpp  calcBackProject_Demo3.cpp  calcHist_Demo.cpp  compareHist_Demo.cpp  copyMakeBorder_demo.cpp  filter2D_demo.cpp  findContours_demo.cpp  generalContours_demo1.cpp  generalContours_demo2.cpp  houghcircles.cpp  houghlines.cpp  hull.cpp  hull_demo.cpp  main.cpp  moments_demo.cpp  pointPolygonTest_demo.cpp  squares.cpp
2022/OpenCV4 tutorial/: CMakeLists.txt  Opencv cuda dnn yolov5.docx  install.txt  pylon_cv（含vs的cv配置）.docx
2022/OpenCV4 tutorial/1 Test OpenCV/: just_test.cpp  just_test.cs  just_test.py
2022/OpenCV4 tutorial/10 Image transform/: Desktop.ini  transform.cpp  transform.cs  transform.py
2022/OpenCV4 tutorial/11 image equalizeHist/: EqHist.cpp  EqHist.cs  EqHist.py  dark.jfif
2022/OpenCV4 tutorial/12 Image encoding/: JPEG_Compressing.cpp  JPEG_Compressing.cs  JPEG_Compressing.py
2022/OpenCV4 tutorial/13 Linear filter/: blur_2(2).cpp  blur_2.cpp  blur_2.cs  blur_2.py  box.cpp  box.cs  box.py
2022/OpenCV4 tutorial/14 Guided Image Filter/: Desktop.ini  Laplace.cpp  Laplace.cs  Laplace.py  grad.cpp  grad.cs  grad.py  sobel Filter.cpp  sobel Filter.cs  sobel Filter.py
2022/OpenCV4 tutorial/14 Guided Image Filter/gapi/: grad.cpp
2022/OpenCV4 tutorial/15 Other filter/: Median.cpp  Median.cs  Median.py  bilateral.cpp  bilateral.cs  bilateral.py
2022/OpenCV4 tutorial/15 Other filter/cuda/: bilateral.cpp
2022/OpenCV4 tutorial/16 connected component/: ConnectedComponents.cpp  ConnectedComponents.cs  ConnectedComponents.py  Desktop.ini
2022/OpenCV4 tutorial/17 Threshold Segmentation/: Range.cpp  Range.cs  Range.py
2022/OpenCV4 tutorial/2 Get Data from Image pixel/: Desktop.ini  get_data_from_image1.cpp  get_data_from_image1.cs  get_data_from_image1.py  get_data_from_image2.cpp  get_data_from_image2.cs  get_data_from_image2.py
2022/OpenCV4 tutorial/3 local camera sampling/: cameraSampling.cpp  cameraSampling.cs  cameraSampling.py
2022/OpenCV4 tutorial/4 webcam sampling/: cameraSampling.cpp  cameraSampling.cs  cameraSampling.py
2022/OpenCV4 tutorial/5 Get Data from Streaming/: input.cpp  input.cs  input.py  推流操作.txt
2022/OpenCV4 tutorial/5 Get Data from Streaming/ffmpeg/: pwd_rtmp.bat  rtmp.bat  rtsp.bat  udp.bat
2022/OpenCV4 tutorial/6 calculation of Mat/: Mat usage.cpp  Mat usage.cs  np_array_usage.py
2022/OpenCV4 tutorial/7 Image resample/: resize_example.cpp  resize_example.cs  resize_example.py
2022/OpenCV4 tutorial/8 Transfer ColorSpace/: split_merge.cpp  split_merge.cs  split_merge.py  transfer.cpp  transfer.cs  transfer.py
2022/OpenCV4 tutorial/9 Image Quality Analysis/: ImageQualityAnalysis.cpp  ImageQualityAnalysis.cs  ImageQualityAnalysis.py
2022/OpenCV4 tutorial/BackgroundSubtractor/: BackgroundSubstractor_cv.cpp  BackgroundSubstractor_cv.cs  BackgroundSubstractor_cv.py
2022/OpenCV4 tutorial/Canny/: CannyEdge.cpp  CannyEdge.cs  CannyEdge.py
2022/OpenCV4 tutorial/ColorCorrection/: mcc_ccm.cpp
2022/OpenCV4 tutorial/GUI example/: Desktop.ini
2022/OpenCV4 tutorial/GUI example/C#/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  opencv_wpf.csproj
2022/OpenCV4 tutorial/GUI example/build-opencv-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.opencv.Debug  object_script.opencv.Release  ui_widget.h
2022/OpenCV4 tutorial/GUI example/c++/: drag_and_drop.cpp  drag_and_drop.h  image.qrc  interactiveview.cpp  interactiveview.h  main.cpp  myapplication.cpp  myapplication.h  opencv.pro  opencv.pro.user.0dd95b8  widget.cpp  widget.h  widget.ui  wrapper.cpp  wrapper.h
2022/OpenCV4 tutorial/Harris Corner Detector/: Harris(很卡).py  Harris.cpp  Harris.cs
2022/OpenCV4 tutorial/Hough Transform/: circles.cpp  circles.cs  circles.py  lines.cpp  lines.cs  lines.py
2022/OpenCV4 tutorial/KNN match/: knn1.cpp  knn_cv.py
2022/OpenCV4 tutorial/QRCode/: qrcode_decode.cpp  qrcode_decode.cs  qrcode_decode.py
2022/OpenCV4 tutorial/aruco/: aruco - local.py  aruco.cpp  aruco.cs  aruco.py
2022/OpenCV4 tutorial/calibration3D/: calib3d_depth.cpp
2022/OpenCV4 tutorial/feather matching/: Desktop.ini
2022/OpenCV4 tutorial/morphology/: get_contour.cpp  morphology.cpp  morphology.cs  morphology.py  paintColor_to_contour.cpp
2022/OpenCV4 tutorial/stitching/: stitch.cpp  stitch.cs  stitch.py
2022/OpenCV4 tutorial/web opencv/: just_test.html
2022/OpenCV4 tutorial/xml read write/: Desktop.ini  VID5.xml  test.xml  xmlRW.py  xmlRead.cpp  xmlWrite.cpp  xmlWriteRead.cs
QTCV_poker/: main.cpp  (+1 more)
(+406 files in other folders)
